--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 					<div class = "text">
 						<header>
 						<p> மனதை ஒருநிலைபடுத்தி, எண்ணங்களை தெளிவாக்கி, நரம்பு மண்டலத்தை புத்துணர்ச்சி பெறச் செய்து, 
-						கவனத்துடன் உடற்பயிற்சி செய்ய தூங்டும் செயளே கோலமிடுதள் ஆகும்! 
+							கவனத்துடன் உடற்பயிற்சி செய்ய தூண்டும் செயலே கோலமிடுதள் ஆகும்! </p>
 							
-						இதில் வாசல் படி நாச்சியார் இருப்பதாக ஒரு நம்பிக்கையும் உண்டு!
+							<p> இதில் வாசல் படி நாச்சியார் இருப்பதாக ஒரு நம்பிக்கையும் உண்டு!</p>
 
-						இந்த வலைத்தளம் என் அம்மாவிடமிருந்து பெற்ற கோலங்கள்,
+						<p> இந்த வலைத்தளம் என் அம்மாவிடமிருந்து பெற்ற கோலங்கள்,
 						மாத இதழ்கள் மற்றும் புத்தகங்கள் போன்ற பல்வேறு குறிப்புகளிலிருந்து 
 						சேகரிக்கப்பட்டு எனது சுவைக்கேற்ப மீண்டும் உருவாக்கப்பட்ட கோலங்களின் களஞ்சியமாகும்.</p> 
 						</header>
