--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 		<div id="main"> 
 			<div class="inner">
 				<div class="container">
-					<div class = "image">
+					<!--<div class = "image">
 						<img src="img/RV_logo.png" alt="" style="width:100%;height:100%">
-					</div>
+					</div>-->
 					<div class = "text">
 						<header>
 						<p> மனதை ஒருநிலைபடுத்தி, எண்ணங்களை தெளிவாக்கி, நரம்பு மண்டலத்தை புத்துணர்ச்சி பெறச் செய்து, 
-							கவனத்துடன் உடற்பயிற்சி செய்ய தூண்டும் செயலே கோலமிடுதள் ஆகும்! </p>
+							கவனத்துடன் உடற்பயிற்சி செய்ய தூண்டும் செயலே கோலமிடுதல் ஆகும்! </p>
 							
 							<p> இதில் வாசல் படி நாச்சியார் இருப்பதாக ஒரு நம்பிக்கையும் உண்டு!</p>
 
